[project]
name = "livelm"
version = "0.1.0"
description = "Live camera & screen share → local VLM analysis on Apple Silicon"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    "gradio>=6.8.0",
    "mlx-vlm>=0.3.12",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
livelm = "app:main"
